<resources>
    <string name="app_name">Rahayoo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="no_account_label">Didn\'t have an account? <b>Register</b></string>
    <string name="login">Login</string>
    <string name="forgot_password_question">Forgot Password?</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="have_account_label">Already have account? <b>Login</b></string>
    <string name="stress_level_test">Stress Level Test</string>
    <string name="stress_test_intro_title">Welcome to the Stress Test Room</string>
    <string name="stress_test_intro_subtitle">you will prompted some easy question in order to measure your stress level. \n<i>Press the button below to start!</i></string>
    <string name="start">Start</string>
    <string name="one">1</string>
    <string name="scale_instruction">Scale 1 - 5</string>
    <string name="question_header">In the last week,</string>
    <string name="next_question">Next Question</string>
    <string name="question_counter_headline">Question %1$d/10</string>
    <string name="emote_scale_1">😀</string>
    <string name="emote_scale_2">🙂</string>
    <string name="emote_scale_3">😔</string>
    <string name="emote_scale_4">😩</string>
    <string name="emote_scale_5">😫</string>
    <string name="submit">Submit</string>
    <string name="app_logo">App Logo</string>
    <string name="weekly_calendar">Weekly Calendar</string>
    <string name="see_more">See More</string>
    <string name="performance_overview">Performance Overview</string>
    <string name="performance_overview_subtitle">Check your tasks here.</string>
    <string name="test_your_stress">Test Your Stress</string>
    <string name="stress_test_status_uncompleted">You haven\'t take any test yet</string>
    <string name="take_a_test">Take a Test</string>
    <string name="fetching_user_data">Fetching User Data</string>
    <string name="stress_level_weekly_percentage">%1$.1f%%\n Stress Level</string>
    <string name="stress_level_result">%1$.0f\n%2$s</string>
    <string name="fragment_login_route">LoginFragmentRoute</string>
    <string name="fragment_home_route">HomeFragmentRoute</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="chat_button">Chat Button</string>
    <string name="fragment_profile_route">FragmentProfileRoute</string>
    <string name="chat">Chat</string>
    <string name="chat_field_label">Type here...</string>
    <string name="update_your_date_text">Update your data to experience more features</string>
    <string name="profile_image_desc">Profile Image</string>
    <string name="organization_settings">Organization Settings</string>
    <string name="app_settings">App Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="help_center">Help Center</string>
    <string name="data_privacy_guidelines"><![CDATA[Data & Privacy Guidelines]]></string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="job_title">Job Title</string>
    <string name="department">Department</string>
    <string name="updating_profie">Updating Profie</string>
    <string name="choose_date_of_birth">Choose date of Birth</string>
    <string name="login_with_google">Login with Google</string>
    <string name="register_with_google">Register with Google</string>
    <string name="done">Done</string>
    <string name="chat_sample_1">Hi! how are you?</string>
    <string name="chat_sample_2">I\'m having a bad day today</string>
    <string name="sign_out">Sign Out</string>
    <string name="dummy_dept_name">test-dept</string>
    <string name="stress_level_result_low">Low</string>
    <string name="stress_level_result_moderate">Moderate</string>
    <string name="stress_level_result_high">High</string>
    <string name="stress_level_low_info_tips">It’s seems you are stressed in low level, keep it stable by channeling your stress through positive channel like watching your favorite show.</string>
    <string name="stress_level_moderate_info_tips">It’s seems you are stressed in moderate level, lower you stress by channeling your stress through positive channel like watching your favorite show.</string>
    <string name="stress_level_high_info_tips">Careful because your stress level is high, lower you stress by channeling your stress through positive channel like watching your favorite show.</string>
</resources>