<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.test.StressTestFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        android:src="@drawable/auth_blob"
        android:layout_marginTop="-12dp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="72dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_close"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_close"
        app:iconTint="?attr/colorOnPrimary"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintBottom_toTopOf="@id/guideline_top"/>

    <com.robinhood.ticker.TickerView
        android:id="@+id/tv_stress_level_headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/stress_level_test"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/btn_close" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/lpi_question"
        style="@style/Widget.Material3.LinearProgressIndicator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/tv_stress_level_headline"
        app:trackCornerRadius="2dp" />

    <TextView
        android:id="@+id/tv_stress_level_intro_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/stress_test_intro_title"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_stress_level_intro_subtitle"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/tv_stress_level_intro_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/stress_test_intro_subtitle"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/tv_stress_level_intro_title" />

    <ImageView
        android:id="@+id/iv_stress_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/item_stress_result_moderate"
        app:layout_constraintBottom_toTopOf="@id/cv_stress_result_info_container"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/lpi_question"
        android:visibility="gone"
        android:importantForAccessibility="no"/>

    <TextView
        android:id="@+id/tv_stress_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/iv_stress_result"
        app:layout_constraintBottom_toBottomOf="@id/iv_stress_result"
        app:layout_constraintStart_toStartOf="@id/iv_stress_result"
        app:layout_constraintEnd_toEndOf="@id/iv_stress_result"
        android:textColor="?attr/colorOnPrimary"
        android:text="20\nModerate"
        android:textAlignment="center"
        android:layout_marginTop="24dp"
        android:visibility="gone"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_stress_result_info_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintBottom_toTopOf="@id/btn_stress_test"
        android:layout_marginBottom="12dp"
        android:visibility="gone"
        android:backgroundTint="?attr/colorPrimaryContainer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/tv_stress_result_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stress_level_result_low"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"/>

            <TextView
                android:id="@+id/tv_stress_result_info_tips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/stress_level_low_info_tips"/>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_question_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/lpi_question"
        app:layout_constraintBottom_toTopOf="@id/cv_question_container"
        android:text="@string/question_header"
        android:visibility="gone"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="12dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="8dp"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_stress_test"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_question_navigate"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:text="@string/next_question"
        android:layout_marginBottom="32dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_question_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tv_question_header"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintBottom_toTopOf="@id/btn_question_navigate">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/tv_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="how often have you felt that you were unable to control the important things in your life?"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"/>

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/cpi_slider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:indicatorSize="150dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_question"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:trackColor="?attr/colorSurfaceContainerHigh"
                app:showAnimationBehavior="outward"
                android:progress="1"
                tools:progress="75"/>

            <TextView
                android:id="@+id/tv_answer_emote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Material3.DisplaySmall"
                app:layout_constraintStart_toStartOf="@id/cpi_slider"
                app:layout_constraintEnd_toEndOf="@id/cpi_slider"
                app:layout_constraintTop_toTopOf="@id/cpi_slider"
                app:layout_constraintBottom_toBottomOf="@id/cpi_slider"
                android:text="😀"/>

            <com.robinhood.ticker.TickerView
                android:id="@+id/tv_label_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
                app:layout_constraintTop_toBottomOf="@id/cpi_slider"
                app:layout_constraintStart_toStartOf="@id/cpi_slider"
                app:layout_constraintEnd_toEndOf="@id/cpi_slider"/>

            <TextView
                android:id="@+id/tv_label_instruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scale_instruction"
                android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                app:layout_constraintTop_toBottomOf="@id/tv_label_answer"
                app:layout_constraintStart_toStartOf="@id/tv_label_answer"
                app:layout_constraintEnd_toEndOf="@id/tv_label_answer"/>

            <com.google.android.material.slider.Slider
                android:id="@+id/slider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_label_instruction"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:thumbRadius="8dp"
                android:stepSize="0.25"
                app:labelBehavior="gone"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>